# ChangeLog for x11-misc/urxvt-tabbedex
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*urxvt-tabbedex-0.4 (08 Mar 2015)

  08 Mar 2015; Johann Schmitz <ercpe@gentoo.org>
  +files/0001-make-urxvt-tabbedex-work-with-perl-5.18.patch, +metadata.xml,
  +urxvt-tabbedex-0.4.ebuild:
  New ebuilld for urxvt tabbedex extension