@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  x11-misc/urxvt-tabbedex: Add github to remote-id in metadata.xml
+
 *urxvt-tabbedex-0.4 (08 Mar 2015)
 
   08 Mar 2015; Johann Schmitz <ercpe@gentoo.org>
